feat: modify userWord schema
