# doc/api.yaml
@@ -43,8 +43,16 @@ components:
     UserWord:
       type: object
       properties:
-        difficulty:
-          type: string
+        wasPlayed:
+          type: boolean
+        correctGuessCount:
+          type: number
+        wrongGuessCount:
+          type: number
+        isDifficult:
+          type: boolean
+        isLearned:
+          type: boolean
         optional:
           type: object
           items:
@@ -327,8 +335,16 @@ paths:
               type: object
               title: example
               properties:
-                difficulty:
-                  type: string
+                wasPlayed:
+                  type: boolean
+                correctGuessCount:
+                  type: number
+                wrongGuessCount:
+                  type: number
+                isDifficult:
+                  type: boolean
+                isLearned:
+                  type: boolean
                 optional:
                   type: object
                   items:
@@ -373,8 +389,16 @@ paths:
               type: object
               title: example
               properties:
-                difficulty:
-                  type: string
+                wasPlayed:
+                  type: boolean
+                correctGuessCount:
+                  type: number
+                wrongGuessCount:
+                  type: number
+                isDifficult:
+                  type: boolean
+                isLearned:
+                  type: boolean
                 optional:
                   type: object
                   items:
@@ -429,10 +453,10 @@ paths:
       - name: filter
         in: query
         required: false
-        description: Filter by aggreagted word fields. It should be a stringified object which meet MongoDB Query object conditions.<br>
-          Get all words that have difficulte="hard AND optional.key="value <pre>{"$and":[{"userWord.difficulty":"hard", "userWord.optional.key":"value"}]}</pre><br>
-          Get all words that have difficulty equal="easy" OR do not have the linked userWord <pre>{"$or":[{"userWord.difficulty":"easy"},{"userWord":null}]}</pre><br>
-          Get all words that have BOTH difficulty equal="easy" AND optional.repeat=true, OR do not have the linked userWord <pre>{"$or":[{"$and":[{"userWord.difficulty":"easy", "userWord.optional.repeat":true}]},{"userWord":null}]}</pre><br>
+        description: Filter by aggregated word fields. It should be a stringified object which meet MongoDB Query object conditions.<br>
+          Get all words that have isDifficult=true AND optional.key="value" <pre>{"$and":[{"userWord.isDifficult":true, "userWord.optional.key":"value"}]}</pre><br>
+          Get all words that have isDifficult=false OR do not have the linked userWord <pre>{"$or":[{"userWord.isDifficult":false},{"userWord":null}]}</pre><br>
+          Get all words that have BOTH isDifficult=false AND optional.repeat=true, OR do not have the linked userWord <pre>{"$or":[{"$and":[{"userWord.isDifficult":false, "userWord.optional.repeat":true}]},{"userWord":null}]}</pre><br>
         schema:
           type: string
     get:
